updated the pre-header block to allow a menu to be added.

--- a/sections/pre-header.liquid
+++ b/sections/pre-header.liquid
@@ -1,8 +1,10 @@
 <div class='twcss-w-full twcss-text-right twcss-bg-gray-200 twcss-py-2'>
   <div class='twcss-max-w-[1440px] twcss-m-auto twcss-px-20'>
-    {% if section.settings.menu %}
-      {% for link in linklists[section.settings.menu].links %}
-        <a href="{{ link.url }}" class="twcss-mx-2">{{ link.title }}</a>
+    {% if section.blocks.size > 0 %}
+      {% for block in section.blocks %}
+        {% for link in linklists[block.settings.menu].links %}
+          <a href="{{ link.url }}" class="twcss-mx-2">{{ link.title }}</a>
+        {% endfor %}
       {% endfor %}
     {% else %}
       Contact us | Find a Stockist | Account
@@ -15,24 +17,33 @@
   "name": "Pre Header",
   "tag": "section",
   "class": "pre-header",
-  "limit": 1,
   "settings": [
     {
       "type": "color_scheme",
       "id": "color_scheme",
       "label": "t:sections.all.colors.label",
       "default": "scheme-4"
-    },
+    }
+  ],
+  "blocks": [
     {
       "type": "menu",
-      "id": "menu",
-      "label": "Select Menu",
-      "default": null
+      "name": "Menu Block",
+      "settings": [
+        {
+          "type": "menu",
+          "id": "menu",
+          "label": "Select Menu",
+          "default": null
+        }
+      ],
+      "limit": 1
     }
   ],
   "presets": [
     {
-      "name": "Pre Header"
+      "name": "Pre Header",
+      "category": "Header"
     }
   ],
   "locales": {
