Latest css changes for typography

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -14,6 +14,7 @@
     {%- unless settings.type_header_font.system? and settings.type_body_font.system? -%}
       <link rel='preconnect' href='https://fonts.shopifycdn.com' crossorigin>
     {%- endunless -%}
+    <link rel="stylesheet" href="https://use.typekit.net/dwh5exi.css">
 
     <title>
       {{ page_title }}
@@ -109,7 +110,7 @@
         --font-body-weight: {{ settings.type_body_font.weight }};
         --font-body-weight-bold: {{ settings.type_body_font.weight | plus: 300 | at_most: 1000 }};
 
-        --font-heading-family: {{ settings.type_header_font.family }}, {{ settings.type_header_font.fallback_families }};
+        --font-heading-family: 'univia-pro', {{ settings.type_header_font.fallback_families }};
         --font-heading-style: {{ settings.type_header_font.style }};
         --font-heading-weight: {{ settings.type_header_font.weight }};
 
