--- a/assets/app.css
+++ b/assets/app.css
@@ -563,12 +563,53 @@ video {
   margin-right: 0.5rem;
 }
 
+.twcss-hidden {
+  display: none;
+}
+
 .twcss-w-full {
   width: 100%;
 }
 
 .twcss-max-w-\[1440px\] {
   max-width: 1440px;
+}
+
+.twcss-border {
+  border-width: 1px;
+}
+
+.twcss-border-r {
+  border-right-width: 1px;
+}
+
+.twcss-border-r-2 {
+  border-right-width: 2px;
+}
+
+.twcss-border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
+.twcss-border-gray-900 {
+  --tw-border-opacity: 1;
+  border-color: rgb(17 24 39 / var(--tw-border-opacity));
+}
+
+.twcss-border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}
+
+.twcss-border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.twcss-border-gray-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
 .twcss-bg-gray-200 {
@@ -586,6 +627,32 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.twcss-pr-2 {
+  padding-right: 0.5rem;
+}
+
+.twcss-pr-3 {
+  padding-right: 0.75rem;
+}
+
 .twcss-text-right {
   text-align: right;
+}
+
+.twcss-leading-tight {
+  line-height: 1.25;
+}
+
+.twcss-leading-none {
+  line-height: 1;
+}
+
+.twcss-leading-3 {
+  line-height: .75rem;
+}
+
+@media (min-width: 750px) {
+  .md\:twcss-block {
+    display: block;
+  }
 }
