--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -99,8 +99,8 @@
 <script src="{{ 'cart-notification.js' | asset_url }}" defer="defer"></script>
 
 <svg xmlns="http://www.w3.org/2000/svg" class="hidden">
-  <symbol id="icon-search" viewbox="0 0 18 19" fill="none">
-    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.03 11.68A5.784 5.784 0 112.85 3.5a5.784 5.784 0 018.18 8.18zm.26 1.12a6.78 6.78 0 11.72-.7l5.4 5.4a.5.5 0 11-.71.7l-5.41-5.4z" fill="currentColor"/>
+  <symbol id="icon-search" viewbox="0 0 32 32" fill="none" width="32" height="32">
+    <path d="M28 28L20.6833 20.6833M23.5556 13.7778C23.5556 19.1779 19.1779 23.5556 13.7778 23.5556C8.37766 23.5556 4 19.1779 4 13.7778C4 8.37766 8.37766 4 13.7778 4C19.1779 4 23.5556 8.37766 23.5556 13.7778Z" stroke="#231F20" stroke-width="2" stroke-miterlimit="3.8637" stroke-linecap="square"/>
   </symbol>
 
   <symbol id="icon-reset" class="icon icon-close"  fill="none" viewBox="0 0 18 18" stroke="currentColor">
