--- a/sections/pre-header.liquid
+++ b/sections/pre-header.liquid
@@ -1,4 +1,4 @@
-<div class='twcss-w-full twcss-text-right twcss-bg-gray-200 twcss-py-2 twcss-hidden md:twcss-block'>
+<div class='twcss-w-full twcss-text-right twcss-bg-gray-200 twcss-py-2 twcss-hidden md:twcss-block twcss-text-xl'>
   <div class='twcss-max-w-[1440px] twcss-m-auto twcss-px-20'>
     {% if section.blocks.size > 0 %}
       {% for block in section.blocks %}
