--- a/assets/base.css
+++ b/assets/base.css
@@ -267,6 +267,13 @@ h5,
   word-break: break-word;
 }
 
+p {
+  color: black;
+}
+.header__menu-item {
+  color: black !important;
+}
+
 .hxxl {
   font-size: clamp(
     calc(var(--font-heading-scale) * 5.6rem),
