--- a/assets/app-tailwind.css
+++ b/assets/app-tailwind.css
@@ -63,3 +63,6 @@ input#bh-sl-address {
 form#bh-sl-user-location .scasl-search-btn {
   @apply twcss-border-0 twcss-p-0;
 }
+.permission-error {
+  display: none;
+}
