--- a/assets/app-tailwind.css
+++ b/assets/app-tailwind.css
@@ -68,3 +68,11 @@ form#bh-sl-user-location .scasl-search-btn {
 .permission-error {
   display: none !important;
 }
+
+/* Loyalty overrides */
+._linkPreview_xi026_26 {
+  display: none !important;
+}
+._popupFooter_hytmr_1 {
+  display: none !important;
+}
