Make sure pre-header is only.available in the header.

--- a/sections/pre-header.liquid
+++ b/sections/pre-header.liquid
@@ -19,6 +19,9 @@
   "name": "Pre Header",
   "class": "pre-header",
   "max_blocks": 1,
+  "enabled_on": {
+    "groups": ["header"]
+  },
   "blocks": [
     {
       "type": "menu",
