--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -4,6 +4,8 @@
 {{ 'component-list-menu.css' | asset_url | stylesheet_tag }}
 {{ 'component-list-payment.css' | asset_url | stylesheet_tag }}
 {{ 'component-list-social.css' | asset_url | stylesheet_tag }}
+{{ 'footer-menu.js' | asset_url | script_tag }}
+
 
 {%- style -%}
   .footer {
@@ -76,7 +78,14 @@
                 {% endif %}
               >
                 {%- if block.settings.heading != blank -%}
-                  <h2 class="footer-block__heading inline-richtext">{{- block.settings.heading -}}</h2>
+                  <div class="twcss-flex twcss-justify-between twcss-items-start">
+                    <h2 class="footer-block__heading inline-richtext">{{- block.settings.heading -}}</h2>
+                    <button class="toggle-menu md:twcss-hidden" aria-expanded="false" aria-controls="menu-{{ forloop.index }}">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                        <path d="M6 9L12 15L18 9" stroke="white" stroke-width="2" stroke-miterlimit="3.8637" stroke-linecap="square" stroke-linejoin="round"/>
+                      </svg>
+                    </button>
+                  </div>  
                 {%- endif -%}
 
                 {%- case block.type -%}
@@ -88,7 +97,7 @@
                     </div>
                   {%- when 'link_list' -%}
                     {%- if block.settings.menu != blank -%}
-                      <ul class="footer-block__details-content list-unstyled">
+                      <ul id="menu-{{ forloop.index }}" class="footer-block__details-content list-unstyled twcss-hidden md:twcss-block">
                         {%- for link in block.settings.menu.links -%}
                           <li>
                             <a
@@ -241,7 +250,7 @@
   {%- endif -%}
 
   <div
-    class="footer__content-bottom twcss-border-t-2 twcss-border-white{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
+    class="footer__content-bottom {% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
     {% if settings.animations_reveal_on_scroll %}
       data-cascade
     {% endif %}
@@ -272,7 +281,7 @@
           </localization-form>
         {%- endif -%}
       </div>
-      <div class="twcss-flex twcss-flex-col md:twcss-flex-row md:twcss-justify-between twcss-w-full md:twcss-items-center twcss-justify-start">
+      <div class="footer__bottom">
         <div class="footer__social">
           {%- if section.settings.show_social and has_social_icons -%}
             {%- render 'social-icons', class: 'footer__list-social' -%}
