--- a/snippets/icon-arrow.liquid
+++ b/snippets/icon-arrow.liquid
@@ -1,10 +1,10 @@
 <svg
-  viewBox="0 0 14 10"
+  width="16"
+  height="16"
+  viewBox="0 0 16 16"
   fill="none"
-  aria-hidden="true"
-  focusable="false"
-  class="icon icon-arrow"
-  xmlns="http://www.w3.org/2000/svg"
 >
-  <path fill-rule="evenodd" clip-rule="evenodd" d="M8.537.808a.5.5 0 01.817-.162l4 4a.5.5 0 010 .708l-4 4a.5.5 0 11-.708-.708L11.793 5.5H1a.5.5 0 010-1h10.793L8.646 1.354a.5.5 0 01-.109-.546z" fill="currentColor">
+  <g id="Size=Small, Direction=Left, Length=Long">
+    <path id="Line 5" d="M13.6001 8.00003L9.74536e-05 8.00005M13.6001 8.00003L6.50446 15.2M13.6001 8.00003L6.50445 0.800049" stroke="#231F20" stroke-width="2" stroke-linejoin="round"/>
+  </g>
 </svg>
