--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -157,7 +157,7 @@
               class="full-unstyled-link"
               aria-labelledby="CardLink-{{ section_id }}-{{ card_product.id }} Badge-{{ section_id }}-{{ card_product.id }}"
             >
-              <h4>{{ card_product.title | escape }}</h4>
+              <div class="h3">{{ card_product.title | escape }}</div>
               {% if card_product.metafields.custom.product_subtitle %}
                 <span class="product-subtitle">{{ card_product.metafields.custom.product_subtitle | escape }}</span>
               {% endif %}
