--- a/sections/multicolumn.liquid
+++ b/sections/multicolumn.liquid
@@ -135,7 +135,7 @@
                     {% endif %}
                   >
                     {{- block.settings.link_label | escape -}}
-                    <span class="icon-wrap">{% render 'icon-arrow' %}</span></a
+                    <span class="icon-wrap">{% render 'icon-arrow-full' %}</span></a
                   >
                 {%- endif -%}
               </div>
