--- a/snippets/icon-arrow.liquid
+++ b/snippets/icon-arrow.liquid
@@ -1,10 +1,3 @@
-<svg
-  width="16"
-  height="16"
-  viewBox="0 0 16 16"
-  fill="none"
->
-  <g id="Size=Small, Direction=Left, Length=Long">
-    <path id="Line 5" d="M13.6001 8.00003L9.74536e-05 8.00005M13.6001 8.00003L6.50446 15.2M13.6001 8.00003L6.50445 0.800049" stroke="#231F20" stroke-width="2" stroke-linejoin="round"/>
-  </g>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+<path d="M9 18L15 12L9 6" stroke="#0D374B" stroke-width="2" stroke-miterlimit="3.8637" stroke-linecap="square" stroke-linejoin="round"/>
 </svg>
