--- a/assets/custom-tailwind.css
+++ b/assets/custom-tailwind.css
@@ -210,3 +210,7 @@ form#bh-sl-user-location .scasl-search-btn {
 .product-title {
   @apply twcss-mb-4;
 }
+/** Ingredient filter list **/
+.alpha-list-group {
+  @apply twcss-grid twcss-grid-cols-1 md:twcss-grid-cols-3 twcss-gap-16 twcss-list-none;
+}
