Added js back into ingredients page.

--- a/sections/ingredient-index.liquid
+++ b/sections/ingredient-index.liquid
@@ -13,6 +13,10 @@
     {% endpaginate %}
 </div>
 
+<!-- Include AlphaListNav.js -->
+<script src="{{ 'AlphaListNav.js' | asset_url }}" defer="defer"></script>
+
+<script src="{{ 'ingredient-index.js' | asset_url }}" defer="defer"></script>
 
 {% schema %}
 {
