--- a/assets/app.css
+++ b/assets/app.css
@@ -309,30 +309,61 @@ form#bh-sl-user-location .scasl-search-btn {
   display: grid;
   list-style-type: none;
   grid-template-columns: repeat(1, minmax(0, 1fr));
-  gap: 6rem;
+  gap: 8rem;
 }
 
 @media (min-width: 750px) {
   .alpha-list-group {
+    grid-auto-rows: minmax(0, 1fr);
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
 
+.ingredient__search {
+  margin: auto;
+}
+
+@media (min-width: 750px) {
+  .ingredient__search {
+    width: 50%;
+  }
+}
+
+.character-element {
+  cursor: pointer;
+}
+
+.character-element:hover {
+  text-decoration: underline !important;
+}
+
+/** Ingredient card **/
+
 .ingredient-card {
-  flex-direction: column;
-  gap: 0.5rem;
+  display: grid;
+  height: 100%;
+  grid-template-rows: auto 1fr auto;
   --tw-text-opacity: 1;
   color: rgb(35 31 32 / var(--tw-text-opacity));
 }
 
 .ingredient-card__title {
+  grid-row-start: 1;
+  grid-row-end: 2;
   padding-bottom: 1rem;
 }
 
 .ingredient-card__description {
+  grid-row-start: 2;
+  grid-row-end: 3;
+  overflow: hidden;
   border-bottom-width: 1px;
-  padding-bottom: 2rem;
-  height: 141px;
+  padding-bottom: 1rem;
+}
+
+.ingredients-card__benefits {
+  grid-row-start: 3;
+  grid-row-end: 4;
 }
 
 .ingredients-card__benefits h4 {
@@ -352,29 +383,19 @@ form#bh-sl-user-location .scasl-search-btn {
   margin-right: 0.25rem;
 }
 
-.ingredient__search {
-  margin: auto;
-}
-
 @media (min-width: 750px) {
-  .ingredient__search {
-    width: 50%;
+  .newsletter__wrapper {
+    display: flex;
+    justify-content: space-between;
   }
-}
 
-.newsletter__wrapper {
-  display: flex;
-  justify-content: space-between;
-}
+  .newsletter__wrapper .newsletter__left {
+    flex-basis: 50%;
+  }
 
-.newsletter__wrapper .newsletter__left {
-  flex: 1 1 0%;
-  padding-left: 24rem;
-}
-
-.newsletter__wrapper .newsletter__right {
-  flex: 1 1 0%;
-  padding-right: 24rem;
+  .newsletter__wrapper .newsletter__right {
+    flex-basis: 50%;
+  }
 }
 
 /*! tailwindcss v3.4.11 | MIT License | https://tailwindcss.com*/
