--- a/sections/ingredient-index.liquid
+++ b/sections/ingredient-index.liquid
@@ -17,7 +17,7 @@
 <div class="page-width">
     <div class="ingredient__search">
         <div class="field twcss-mt-8">
-            <input id="ingredientsSearch" type="search" name="ingredeients-search" class="field__input" value="" aria-required="true" autocorrect="off" autocapitalize="off" required="">
+            <input id="ingredientsSearch" type="search" name="ingredeients-search" class="field__input" placeholder="Search for an ingredient." value="" aria-required="true" autocorrect="off" autocapitalize="off" required="">
             <label class="field__label" for="">
                 Search for an ingredient.
             </label>
